Fix thread support

https://bugzilla.gnome.org/show_bug.cgi?id=620062